feat: Add dual user identification to Supabase logging system
- Add qwen_account_email column to user_interactions table
- Implement getUserInfo() method in QwenOAuth2Client for fetching authenticated user email
- Update Supabase logging to capture both configured user email and Qwen account email
- Enhance InteractionTracker to pass config for Qwen user email extraction
- Add comprehensive Supabase integration with privacy controls and usage tracking
- Include test scripts for validation and debugging
- Update documentation with dual user identification explanation
- Maintain backward compatibility with existing logging functionality

This enables better user tracking and analytics by storing both:
- user_email: From SUPABASE_USER_EMAIL environment variable (for analytics grouping)
- qwen_account_email: From authenticated Qwen OAuth account (for user accountability)

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "codec": "dist/index.js"
+    "codec": "codec.js"
   },
   "scripts": {
     "build": "node ../../scripts/build_package.js",
@@ -30,6 +30,7 @@
   "dependencies": {
     "@google/genai": "1.9.0",
     "@iarna/toml": "^2.2.5",
+    "@supabase/supabase-js": "^2.39.0",
     "codec-core": "file:../core",
     "@types/update-notifier": "^6.0.8",
     "command-exists": "^1.2.9",
