cli: suppress Node warnings globally; rename QWEN.md -> CODECRAFT.md in tips/help; update branding in warnings; add bin/codec wrapper and bin mapping

--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "clean": "node scripts/clean.js"
   },
   "bin": {
-    "codec": "bundle/gemini.js"
+    "codec": "bin/codec.js"
   },
   "files": [
+    "bin/",
     "bundle/",
     "README.md",
     "LICENSE"
