--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codec",
-  "version": "0.0.4",
+  "name": "@qwen-code/qwen-code",
+  "version": "0.0.7",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -10,10 +10,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/QwenLM/qwen-code.git"
+    "url": "git+https://github.com/im-rahulr/qwen-code.git"
   },
   "config": {
-    "sandboxImageUri": "ghcr.io/qwenlm/qwen-code:0.0.4"
+    "sandboxImageUri": "ghcr.io/qwenlm/qwen-code:0.0.7"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -49,10 +49,9 @@
     "clean": "node scripts/clean.js"
   },
   "bin": {
-    "codec": "bin/codec.js"
+    "qwen": "bundle/gemini.js"
   },
   "files": [
-    "bin/",
     "bundle/",
     "README.md",
     "LICENSE"
